--- a/index.html
+++ b/index.html
@@ -9,86 +9,94 @@
 <body>
     <header>
         <nav>
-            <a href="/"><span>Web</span>Studio</a>
+            <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
         </nav>
-        <address></address>
+        <address>
         <ul>
-            <li>info@devstudio.com</li>
-            <li>+11 (000) 111-11-11</li>
+            <li> <a href="mailto:info@devstudio.com">mailto:info@devstudio.com</a></li>
+            <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>  
+        </address>
         </header>
+
         <main>
-                    <h1>Effective Solutions for Your Business</h1>
-                    <button type="button">Order Service</button>
-                
-                <section>
-                    <ul>
-                        <li>
-                            <h3>Strategy</h3>
-                            <p>Our goal is to identify the business
-                                problem to walk away with the perfect and creative solution.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Punctuality</h3>
-                            <p>
-                                Bring the key message to the brand's audience for the best price within the shortest possible
-                                time.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Diligence</h3>
-                            <p>
-                                Research and confirm brands that present the strongest digital growth opportunities and minimize
-                                risk.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Technologies</h3>
-                            <p>
-                                Design practice focused on digital experiences. We bring forth a deep passion for
-                                problem-solving.
-                            </p>
-                        </li>
-                    </ul>
-                </section>
-                <section><h2>What are we doing</h2>
-                <ul>
-                    <li><img src="images/img_pk.jpg" alt="Desctop app img" width="360" height="300">
+        <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+        </section>
+
+        <section>
+        <h2 hidden>benefits</h2>
+            <ul>
+                    <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.
+                    </p>
                     </li>
                     <li>
-                        <img src="images/img_smart.jpg" alt="Messenger img" width="360" height="300">
+                    <h3>Punctuality</h3>
+                    <p>
+                    Bring the key message to the brand's audience for the best price within the shortest possible
+                    time.
+                    </p>
                     </li>
                     <li>
-                        <img src="images/img_tel.jpg" alt="Mobile app img" width="360" height="300">
+                    <h3>Diligence</h3>
+                    <p>
+                    Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    risk.
+                    </p>
                     </li>
+                    <li>
+                    <h3>Technologies</h3>
+                    <p>
+                    Design practice focused on digital experiences. We bring forth a deep passion for
+                    problem-solving.
+                    </p>
+                    </li>
+            </ul>
+        </section>
+
+        <section>
+                    <h2>What are we doing</h2>
+            <ul>
+                <li><img src="./images/img_pk.jpg" alt="Desctop app img" width="360">
+                </li>
+                <li>
+                <img src="./images/img_smart.jpg" alt="Messenger img" width="360">
+                </li>
+                <li>
+                <img src="./images/img_tel.jpg" alt="Mobile app img" width="360">
+                </li>
                 </ul>
-                </section>
-            <section>
+        </section>
+
+        <section>
                 <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/img.mark.jpg" width="264" height="260" alt="product desing">
+                    <img src="./images/img.mark.jpg" width="264" alt="product desing">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/img.tom.jpg" width="264" height="260" alt="Frontend Developer">
+                    <img src="./images/img.tom.jpg" width="264" alt="Frontend Developer">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/img.camila.jpg" width="264" height="260" alt="Marketing">
+                    <img src="./images/img.camila.jpg" width="264" alt="Marketing">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/img.daniel.jpg" width="264" height="260" alt="UI Designer">
+                    <img src="./images/img.daniel.jpg" width="264" alt="UI Designer">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -97,7 +105,7 @@
         </main>
 
             <footer>
-                <h3>WebStudio</h3>
+                <a href="./index.html">WebStudio</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </footer>
         </body>
